# cdict

./: .gitignore  Makefile.am  Makefile.in  README.md  build.sh  cleanup.sh  configure  configure.ac  makefile
autom4te.cache/: output.1  requests  traces.0  traces.1
examples/: Makefile.am  Makefile.in  count.c  custom.c
include/: Makefile.am  Makefile.in  dict.h  dict_common.h  dict_hash.h  dict_item.h
lib/: Makefile.am
src/: dict.c  dict_hash.c  dict_item.c  main.c
